--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,3 +16,10 @@ subprojects {
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
+
+plugins{
+
+id 'com.android.application'
+  id 'com.google.gms.google-services'
+}
+ 
